<resources>
    <string name="app_name">NASA apod</string>
    <string name="app_desc">Get official images from the NASA!</string>
    <string name="apod">Astronomy pic of the day</string>
    <string name="btn_see">See now</string>
    <string name="loading">Loading...</string>
    <string name="error">There was an error on the request :(</string>
    <string name="select">Select a certain date to get the APOD of that day</string>
    <string name="select_date">Select date</string>
</resources>